# libsystemd-journal

./: .gitignore  BUILDING  Changelog.md  cabal.project.local  default.nix  flake.nix  libsystemd-journal.cabal  readme.md  shell.nix
nix/: default.nix  disabled-haskell-tests.nix  ghc-with-packages.nix  haskell-package-overrides.nix  haskell-package-selection.nix  shell.nix
src/Systemd/: Journal.hs  Journal.hsc
