name:                libsystemd-journal
version:             1.4.5
synopsis:            Haskell bindings to libsystemd-journal
homepage:            http://github.com/ocharles/libsystemd-journal
license:             BSD3
license-file:        LICENSE
author:              Oliver Charles
maintainer:          ollie@ocharles.org.uk
copyright: Oliver Charles (c) 2014
category:            System
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:
  Changelog.md

library
  exposed-modules:     Systemd.Journal
  build-depends:       base >=4.6 && <4.17
                     , bytestring >= 0.9.1
                     , pipes >= 4.0
                     , pipes-safe >= 2.0
                     , text >= 0.1
                     , transformers >= 0.3
                     , unix-bytestring >= 0.3.2 && < 0.5
                     , vector >= 0.4 && < 0.13
                     , uuid
                     , unordered-containers >= 0.1 && < 0.3
                     , hashable >= 1.1.2.5
                     , hsyslog
                     , uniplate >= 1.6
                     , semigroups >= 0.1 && < 0.21
  hs-source-dirs:      src
  default-language:    Haskell2010
  pkgconfig-depends: libsystemd >= 209
