cabal-version: 3.0

name:                libsystemd-journal
version:             1.4.5
synopsis:            Haskell bindings to libsystemd-journal
homepage:            https://github.com/ocharles/libsystemd-journal
license:             BSD-3-Clause
license-file:        LICENSE
author:              Oliver Charles
maintainer:          ch.martin@gmail.com, ollie@ocharles.org.uk
copyright:           Oliver Charles (c) 2014
category:            System

extra-source-files:
  Changelog.md

library
  exposed-modules:     Systemd.Journal
  build-depends:     , base ^>= 4.16 || ^>= 4.17 || ^>= 4.18
                     , bytestring ^>= 0.11.1 || ^>= 0.12
                     , pipes >= 4.0
                     , pipes-safe >= 2.0
                     , text ^>= 1.2 || ^>= 2.0
                     , transformers >= 0.3
                     , unix-bytestring >= 0.3.2 && < 0.5
                     , vector >= 0.4 && < 0.13
                     , uuid ^>= 1.3.13
                     , unordered-containers >= 0.1 && < 0.3
                     , hashable >= 1.1.2.5
                     , hsyslog
                     , uniplate >= 1.6
                     , semigroups >= 0.1 && < 0.21
  hs-source-dirs:      src
  default-language:    GHC2021
  default-extensions:  OverloadedStrings
  pkgconfig-depends: libsystemd >= 209
